--- a/client/src/app/spreadsheet/spreadsheet.scss
+++ b/client/src/app/spreadsheet/spreadsheet.scss
@@ -90,6 +90,12 @@ $blank-row-height: 32px;
           background-color: $color-surface-c !important;
         }
       }
+
+      &:has(input-box:focus) {
+        .fill-handler {
+          display: none;
+        }
+      }
     }
   }
 
