refactor: add menu open/close event handling to date and dropdown field cells

--- a/client/src/app/spreadsheet/components/field-cell/date/cell.html
+++ b/client/src/app/spreadsheet/components/field-cell/date/cell.html
@@ -4,6 +4,8 @@
     appendTo="body"
     [ngModel]="data"
     (ngModelChange)="onDatePicked($event)"
+    (onShow)="onMenuOpened()"
+    (onHide)="onMenuClosed()"
   ></p-datepicker>
 }
 @if (data !== undefined && data !== null) {
