--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -1,6 +1,9 @@
 <p-toast />
-<p-menu #menu [model]="menuItems" popup="true" appendTo="body" />
+<p-menu #menu [model]="menuItems" [popup]="true" appendTo="body" />
 <p-contextmenu #contextMenu [model]="menuItems" appendTo="body" />
+<p-popover #cellErrorTooltip [dismissable]="false" appendTo="body" styleClass="cell-error-tooltip">
+  {{ cellErrorMessage }}
+</p-popover>
 
 <virtual-scroll
   [sideSpacing]="tableService.config().sideSpacing"
