refactor: implement confirmation dialogs for delete actions in table row and column services

--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -1,4 +1,5 @@
 <p-toast />
+<p-confirmdialog />
 <p-menu #menu [model]="menuItems" [popup]="true" appendTo="body" />
 <p-contextmenu #contextMenu [model]="menuItems" appendTo="body" />
 <p-popover #cellErrorTooltip [dismissable]="false" appendTo="body" styleClass="cell-error-tooltip">
