refactor: update header action cell styling and improve cursor interactions in spreadsheet component

--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -181,7 +181,7 @@
           ></ng-container>
         }
         @if (tableService.config().column.creatable) {
-          <div class="header-cell cell header-action-cell cursor">
+          <div class="header-cell cell header-action-cell">
             <i class="pi pi-plus-circle"></i>
           </div>
         }
