refactor: add cursor styling for improved user interaction in spreadsheet component

--- a/client/src/app/spreadsheet/spreadsheet.scss
+++ b/client/src/app/spreadsheet/spreadsheet.scss
@@ -163,6 +163,7 @@ $blank-row-height: 32px;
       min-width: 6px;
       margin-left: -3px;
       will-change: transform;
+      cursor: grab;
 
       &.frozen-divider--hover,
       &.frozen-divider--dragging {
